updated nagivation/next to latest, started adding feed

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.1",
-    "@react-navigation/core": "^5.0.0-alpha.10",
-    "@react-navigation/native": "^5.0.0-alpha.8",
-    "@react-navigation/stack": "^5.0.0-alpha.17",
+    "@react-navigation/core": "^5.0.0-alpha.14",
+    "@react-navigation/native": "^5.0.0-alpha.11",
+    "@react-navigation/stack": "^5.0.0-alpha.24",
     "nodejs-mobile-react-native": "^0.5.0",
     "react": "16.10.2",
     "react-native": "0.61.2",
@@ -27,12 +27,14 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-pulse": "^1.0.7",
     "react-native-reanimated": "^1.2.0",
+    "react-native-safe-area-context": "^0.4.1",
+    "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-track-player": "git://github.com/react-native-kit/react-native-track-player.git#97692c6894c5ffaae9ad5772c4db0e24c420ac0d"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/core": "^7.6.3",
+    "@babel/runtime": "^7.6.3",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
