--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "^0.4.1",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-alpha.3",
-    "react-native-track-player": "git://github.com/react-native-kit/react-native-track-player.git#97692c6894c5ffaae9ad5772c4db0e24c420ac0d"
+    "react-native-track-player": "git://github.com/react-native-kit/react-native-track-player.git#97692c6894c5ffaae9ad5772c4db0e24c420ac0d",
+    "react-native-wifi-hotspot": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
