--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-audio": "^4.3.0",
     "react-native-ffmpeg": "^0.2.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-image-picker": "^1.1.0",
     "react-native-pulse": "^1.0.7",
     "react-native-reanimated": "^1.2.0",
     "react-native-safe-area-context": "^0.4.1",
