added app icon; added splash screen; updated deps

--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "react-native-image-picker": "^1.1.0",
     "react-native-pulse": "^1.0.7",
     "react-native-reanimated": "^1.2.0",
-    "react-native-safe-area-context": "^0.4.1",
+    "react-native-safe-area-context": "^0.5.0",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "^2.0.0-alpha.3",
+    "react-native-screens": "^2.0.0-alpha.4",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-track-player": "git://github.com/react-native-kit/react-native-track-player.git#97692c6894c5ffaae9ad5772c4db0e24c420ac0d",
     "react-native-wifi-hotspot": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.3",
+    "@babel/core": "^7.6.4",
     "@babel/runtime": "^7.6.3",
+    "@bam.tech/react-native-make": "^1.0.3",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
