--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/masked-view": "^0.1.1",
     "@react-navigation/core": "^5.0.0-alpha.14",
     "@react-navigation/native": "^5.0.0-alpha.11",
