--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/cli-platform-android": "2.x",
     "@react-native-community/masked-view": "^0.1.1",
     "@react-navigation/core": "^5.0.0-alpha.17",
     "@react-navigation/native": "^5.0.0-alpha.13",
     "@react-navigation/stack": "^5.0.0-alpha.29",
     "nodejs-mobile-react-native": "^0.5.0",
     "react": "16.11.0",
-    "react-native": "0.61.2",
+    "react-native": "0.60",
     "react-native-action-button": "^2.8.5",
     "react-native-android-wifi": "^0.0.41",
     "react-native-audio": "^4.3.0",
@@ -34,7 +35,7 @@
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-alpha.5",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-track-player": "git://github.com/react-native-kit/react-native-track-player.git#97692c6894c5ffaae9ad5772c4db0e24c420ac0d"
+    "react-native-track-player": "react-native-kit/react-native-track-player#dev"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
